# TurboMixer

./: README.md
Arduino/: platformio.ini
Arduino/src/: Alarm.hpp  CommandProcess.cpp  (+36 more)
Case/: .gitignore  Case.m3d  Case.m3d.bak  Case.stl  YD-3621.m3d  YD-3621.m3d.bak  YD-3621.stp  Крышка.m3d  Крышка.m3d.bak  Крышка.stl  Сборка.a3d.bak
Hardware/: FBG5_Case.3mf  FBG5_Case.gcode  MixerControlPart.dch  MixerControlPart.dip  MixerIndicatorPart.dch  MixerIndicatorPart.dip  MixerInterfacePart.dch  MixerInterfacePart.dip  MixerMainPart.dch  MixerMainPart.dip  ~MixerControlPart.dch~  ~MixerControlPart.dip~  ~MixerIndicatorPart.dch~  ~MixerIndicatorPart.dip~  ~MixerMainPart.dch~  ~MixerMainPart.dip~
MixerProgramCompiler/: .gitignore  pack.bat  pyproject.toml  requirements.txt  run.bat
MixerProgramCompiler/data/: big_program.txt  program.txt
MixerProgramCompiler/src/app/: main.py  select_params.py
MixerProgramCompiler/src/compiler/: compiler.py
MixerProgramCompiler/src/compiler/tests/: test_compile_argument.py  test_compile_command.py  test_compile_programm.py
MixerProgramCompiler/src/console_app/: __main__.py
MixerProgramCompiler/src/gui_app/: __main__.py
MixerProgramCompiler/src/loader/: loader.py
MixerProgramCompiler/src/parser/: argument_parser.py  code_parser.py  code_specification.py  exceptions.py
MixerProgramCompiler/src/parser/tests/: test_argument_parser.py  test_line_parser.py  test_parser.py
MixerProgramCompiler/src/program/: command.py
MixerProgramCompiler/src/program_loader/: __init__.py
MixerProgramCompiler/src/serial_loader/: loader.py
