[project]
requires-python = "~=3.8"

[tool.ruff]
line-length = 121
src = ["snmprogs"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "D",
]
ignore = [
    "UP032",
    "D212",
    "D104",
    "D100",
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103",
    "D107", # Missing docstring in `__init__`
    "D211", # `no-blank-line-before-class`
]